--- a/game.html
+++ b/game.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="game.css" />
   </head>
   <body>
+    <!-- This is my first JS Game -->
     <div class="container">
       <h1>Rock Paper Scissor game :</h1>
       <!-- box contain all choice -->
